<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kb.incomeexpenseapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_incomes"
        android:name="com.kb.incomeexpenseapp.ui.income.IncomeFragment"
        android:label="@string/title_incomes"
        tools:layout="@layout/fragment_incomes" />

    <fragment
        android:id="@+id/navigation_expenses"
        android:name="com.kb.incomeexpenseapp.ui.expense.ExpensesFragment"
        android:label="@string/title_expenses"
        tools:layout="@layout/fragment_expenses" />
</navigation>